Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15039

Reference leak in lnet_parse()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      Bug introduced by:

      commit 955080c3ae3f33c98e068f52a096761ea28624b7
      Author: Chris Horn <chris.horn@hpe.com>
      Date:   Fri Jul 10 12:33:50 2020 -0500
      
          LU-13779 lnet: Correct asymmetric route detection
      

      We need to drop the reference taken by lnet_nid2peerni_locked() if we're dropping the message because of detected asymmetric route. This was fixed in PS4 of LU-13779, but the fix was lost in subsequent rebases of the patch.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: